# velo

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/utils/: agent_logs.py  service_logs.py
config/: config.yml
docs/: VeloDocs.md
scripts/: start-sd.sh  stop-sd.sh
velo/: __init__.py  config.py  main.py
velo/agents/: api_connector.py  audience_agent.py  content_agent.py  creative_agent.py  scheduler_agent.py  supervisor.py  tools.py
velo/db/: alembic.ini  conn.py  models.py  setup.sql
velo/db/migrations/: env.py
velo/db/migrations/versions/: 2e64f1f4f419_updated_table_schemas_all_ids_to_.py  7fec0abbf63c_updated_table_schemas_all_ids_to_.py  95bd5379f1aa_setup_db_tables.py  b448a37705a3_updated_table_schemas_pre_integration_.py  b72e6c7cca90_updated_table_schemas_chat_id_to_.py  db2bbdadb45f_setup_db_tables.py  eb9b9bff427a_setup_db_tables.py
velo/db/services/: artifact.py  campaign.py  task.py
velo/services/: llm_client.py  ollama_client.py  sd_client.py
velo/telegram_interface/: bot.py  handlers.py
velo/types/: agent.py  artifact.py  campaign.py  task.py
velo/utils/: bot_handler_utils.py  server_logs.py  tg_logs.py  types.py
